# otus.lessons.06.02

./: .gitignore  .travis.yml  README.md
docker/: Dockerfile  docker.sh
src/: CMakeLists.txt  main.cpp  solve.h
